--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
     margin: 0;
+    display: flex;
+    justify-content: center;
 }
 
 .main-block {
     display: flex;
     flex-wrap: wrap;
-    padding: 20px 0 20px 20px;
+    padding: 20px 0 0 20px;
 }
 
 main article {
